# nira-translator

./: .gitignore  PRIVACY.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  wxt.config.ts
.github/workflows/: chrome-web-store.yml  ci.yml  release.yml
desktop-tester/: README.md
desktop-tester/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tester/src-tauri/icons/: .gitignore
desktop-tester/src-tauri/src/: lib.rs  main.rs
desktop-tester/ui/: app.js  index.html  styles.css
entrypoints/: background.ts  content.ts
entrypoints/options/: OptionsApp.tsx  index.html  main.tsx
entrypoints/popup/: PopupApp.tsx  index.html  main.tsx
src/constants/: defaults.test.ts  defaults.ts  languages.ts  providers.test.ts  providers.ts
src/content/: SelectionOverlay.test.ts  SelectionOverlay.tsx  messaging.ts  page-dom-parser.test.ts  page-dom-parser.ts  page-floating-ball.css  page-floating-ball.test.ts  page-floating-ball.ts  page-fragmenter.test.ts  page-fragmenter.ts  page-renderer.test.ts  page-renderer.ts  page-translator.test.ts  page-translator.ts  page.css  selection-controller.test.ts  selection-controller.tsx  selection-errors.test.ts  selection-errors.ts  selection.css
src/core/: deepseek-openai.test.ts  direct-providers.test.ts  direct-providers.ts  errors.ts  preview-data.ts  profile-credential.test.ts  profile-credential.ts  profile-migrations.test.ts  profile-migrations.ts  prompts.test.ts  prompts.ts  provider-permission.test.ts  provider-permission.ts  providers-edge.test.ts  providers.test.ts  providers.ts  (+9 more)
test/: setup.ts
(+5 files in other folders)
