[package]
name = "nira-deepseek-diagnostic"
version = "0.2.0"
description = "Native DeepSeek connectivity tester for Nira translator"
authors = ["W1ght"]
edition = "2021"

[lib]
name = "nira_deepseek_diagnostic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "system-proxy", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = [] }
tokio = { version = "1", features = ["net", "time"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
